force-app/main/default/objects/Lead/fields/DV_Relationship_To_Perpetrator__c.field-meta.xml
<CustomField>
    <fullName>DV_Relationship_To_Perpetrator__c</fullName>
    <label>Relationship to Perpetrator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner/spouse</fullName>
            </value>
            <value>
                <fullName>Ex-partner/spouse</fullName>
            </value>
            <value>
                <fullName>Family member</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>