force-app/main/default/objects/Lead/fields/DV_Safe_Place_To_Stay__c.field-meta.xml
<CustomField>
    <fullName>DV_Safe_Place_To_Stay__c</fullName>
    <label>Have Safe Place to Stay Now?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>