force-app/main/default/objects/Lead/fields/DV_Speak_With_Attorney_Options__c.field-meta.xml
<CustomField>
    <fullName>DV_Speak_With_Attorney_Options__c</fullName>
    <label>Speak with Attorney About Legal Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>