force-app/main/default/objects/Lead/fields/DV_Support_Services_Other__c.field-meta.xml
<CustomField>
    <fullName>DV_Support_Services_Other__c</fullName>
    <label>Support Services Other (Specify)</label>
    <type>TextArea</type>
</CustomField>