force-app/main/default/objects/Lead/fields/DV_Types_Of_Abuse__c.field-meta.xml
<CustomField>
    <fullName>DV_Types_Of_Abuse__c</fullName>
    <label>Types of Abuse (Check all that apply)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Emotional or psychological abuse</fullName>
            </value>
            <value>
                <fullName>Financial abuse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physical abuse</fullName>
            </value>
            <value>
                <fullName>Sexual abuse or assault</fullName>
            </value>
            <value>
                <fullName>Stalking or harassment</fullName>
            </value>
            <value>
                <fullName>Verbal abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>