force-app/main/default/objects/Lead/fields/DV_Violence_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DV_Violence_Frequency__c</fullName>
    <label>Violence Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>