force-app/main/default/objects/Lead/fields/DV_Violence_Occurred_Before__c.field-meta.xml
<CustomField>
    <fullName>DV_Violence_Occurred_Before__c</fullName>
    <label>This Type of Violence Occurred Before</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>