force-app/main/default/objects/Lead/fields/DV_Violence_Past_Or_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>DV_Violence_Past_Or_Ongoing__c</fullName>
    <label>Violence Past or Ongoing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Past</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>