force-app/main/default/objects/Lead/fields/EP_Documents_Needed__c.field-meta.xml
<CustomField>
    <fullName>EP_Documents_Needed__c</fullName>
    <label>Documents Needed for Estate Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>