force-app/main/default/objects/Lead/fields/EP_Documents_Needed_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>EP_Documents_Needed_Other_Specify__c</fullName>
    <label>Estate Plan Documents Other (Specify)</label>
    <type>TextArea</type>
</CustomField>