force-app/main/default/objects/Lead/fields/EP_Plan_For_Whom__c.field-meta.xml
<CustomField>
    <fullName>EP_Plan_For_Whom__c</fullName>
    <label>Estate Plan For You or Someone Else?</label>
    <type>TextArea</type>
</CustomField>