force-app/main/default/objects/Lead/fields/Estimated_Damages__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Damages__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>