force-app/main/default/objects/Lead/fields/FA_Signed__c.field-meta.xml
<CustomField>
    <fullName>FA_Signed__c</fullName>
    <formula>IF(
  ISBLANK(Lead_Completion_Date__c), 
  &quot;🔴 No&quot;,
  &quot;🟢 Yes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA Signed?</label>
    <type>Text</type>
</CustomField>