force-app/main/default/objects/Lead/fields/First_Call__c.field-meta.xml
<CustomField>
    <fullName>First_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped by Call Rail Phone Call Completed zap</description>
    <inlineHelpText>Denotes whether this was the first call that the customer made. Set by Call Rail through Zapier. System field, should not be touched or altered</inlineHelpText>
    <label>First Call</label>
    <type>Checkbox</type>
</CustomField>