force-app/main/default/objects/Lead/fields/FL_Child_Safety_Concerns__c.field-meta.xml
<CustomField>
    <fullName>FL_Child_Safety_Concerns__c</fullName>
    <label>Concerns About Safety/Well-being</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>