force-app/main/default/objects/Lead/fields/FL_Children_Details__c.field-meta.xml
<CustomField>
    <fullName>FL_Children_Details__c</fullName>
    <label>Children Details (Names, Ages, DOB)</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>