force-app/main/default/objects/Lead/fields/FL_Children_Involved_Count__c.field-meta.xml
<CustomField>
    <fullName>FL_Children_Involved_Count__c</fullName>
    <label>Number of Children Involved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>