force-app/main/default/objects/Lead/fields/FL_Currently_Married__c.field-meta.xml
<CustomField>
    <fullName>FL_Currently_Married__c</fullName>
    <label>Currently Married?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>