force-app/main/default/objects/Lead/fields/FL_Divorce_Contested_Status__c.field-meta.xml
<CustomField>
    <fullName>FL_Divorce_Contested_Status__c</fullName>
    <label>Divorce Contested or Uncontested?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contested</fullName>
            </value>
            <value>
                <fullName>Uncontested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>