force-app/main/default/objects/Lead/fields/FL_Existing_Custody_Orders__c.field-meta.xml
<CustomField>
    <fullName>FL_Existing_Custody_Orders__c</fullName>
    <label>Existing Custody Orders in Place?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>