force-app/main/default/objects/Lead/fields/FL_Marriage_Date__c.field-meta.xml
<CustomField>
    <fullName>FL_Marriage_Date__c</fullName>
    <label>Marriage Date</label>
    <type>Date</type>
</CustomField>