force-app/main/default/objects/Lead/fields/FL_Property_Division_Bank_Accounts__c.field-meta.xml
<CustomField>
    <fullName>FL_Property_Division_Bank_Accounts__c</fullName>
    <label>Property Division - Bank Accounts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>