force-app/main/default/objects/Lead/fields/FL_Property_Division_Other_Assets__c.field-meta.xml
<CustomField>
    <fullName>FL_Property_Division_Other_Assets__c</fullName>
    <label>Property Division - Other Assets</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>