force-app/main/default/objects/Lead/fields/FL_Property_Division_Real_Estate__c.field-meta.xml
<CustomField>
    <fullName>FL_Property_Division_Real_Estate__c</fullName>
    <label>Property Division - Real Estate</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>