force-app/main/default/objects/Lead/fields/FL_Seeking_Action__c.field-meta.xml
<CustomField>
    <fullName>FL_Seeking_Action__c</fullName>
    <label>Seeking Divorce or Legal Separation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Legal Separation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>