force-app/main/default/objects/Lead/fields/FL_Spouse_Children_Together__c.field-meta.xml
<CustomField>
    <fullName>FL_Spouse_Children_Together__c</fullName>
    <label>Spouse and You Have Children Together?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>