force-app/main/default/objects/Lead/fields/Flat_Fee_Only_earned_in_increments__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee_Only_earned_in_increments__c</fullName>
    <label>Flat Fee Only (earned in increments)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>