force-app/main/default/objects/Lead/fields/Flat_Rate_Retainer_if_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Retainer_if_Flat_Rate__c</fullName>
    <label>Flat Rate Retainer $ (if Flat Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>