force-app/main/default/objects/Lead/fields/Hired_Another_Firm__c.field-meta.xml
<CustomField>
    <fullName>Hired_Another_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The lead was scheduled but did not complete the call due to already hiring another firm</inlineHelpText>
    <label>Hired Another Firm</label>
    <type>Checkbox</type>
</CustomField>