force-app/main/default/objects/Lead/fields/Initial_Retainer_Evergreen_Hr_Rate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Retainer_Evergreen_Hr_Rate__c</fullName>
    <label>Initial Retainer $ (Evergreen Hr Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>