force-app/main/default/objects/Lead/fields/Intake_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Intake_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>