force-app/main/default/objects/Lead/fields/Intake_Completed__c.field-meta.xml
<CustomField>
    <fullName>Intake_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Completed</label>
    <type>Checkbox</type>
</CustomField>