force-app/main/default/objects/Lead/fields/Intake_Form_JSON__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_JSON__c</fullName>
    <label>Intake Form JSON</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>