force-app/main/default/objects/Lead/fields/Intake_Form_Summary_AI__c.field-meta.xml
<CustomField>
    <fullName>Intake_Form_Summary_AI__c</fullName>
    <label>Intake Form Summary (AI)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>