force-app/main/default/objects/Lead/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Briefly describe the issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>