force-app/main/default/objects/Lead/fields/Keywords_AI__c.field-meta.xml
<CustomField>
    <fullName>Keywords_AI__c</fullName>
    <label>Keywords (AI)</label>
    <type>TextArea</type>
</CustomField>