force-app/main/default/objects/Lead/fields/Law_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Law_Clerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Clerk</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>