force-app/main/default/objects/Lead/fields/Lead_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Completion_Date__c</fullName>
    <description>Set by Clio through integration. Once matching field in Clio is filled, this field in Salesforce will be automatically stamped with the same value</description>
    <inlineHelpText>Date that the Fee Agreement in Clio was signed. Set automatically</inlineHelpText>
    <label>Date FA was Signed</label>
    <type>Date</type>
</CustomField>