force-app/main/default/objects/Lead/fields/Legal_Matter_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Matter_Type__c</fullName>
    <label>Type of Legal Matter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Law</fullName>
            </value>
            <value>
                <fullName>Civil Litigation</fullName>
            </value>
            <value>
                <fullName>Criminal Law</fullName>
            </value>
            <value>
                <fullName>Employment Law</fullName>
            </value>
            <value>
                <fullName>Family Law</fullName>
            </value>
            <value>
                <fullName>Landlord-Tenant Dispute</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Injury</fullName>
            </value>
            <value>
                <fullName>Probate/Estate Planning</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>