force-app/main/default/objects/Lead/fields/Legal_Matter_Type_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>Legal_Matter_Type_Other_Specify__c</fullName>
    <label>Legal Matter Type Other (Specify)</label>
    <type>TextArea</type>
</CustomField>