force-app/main/default/objects/Lead/fields/Legal_Matters_With_Parties_Before__c.field-meta.xml
<CustomField>
    <fullName>Legal_Matters_With_Parties_Before__c</fullName>
    <label>Legal matters with these parties</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>