force-app/main/default/objects/Lead/fields/Matter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Matter_Notes__c</fullName>
    <label>Matter Notes</label>
    <type>TextArea</type>
</CustomField>