force-app/main/default/objects/Lead/fields/Matter_Notes_Long__c.field-meta.xml
<CustomField>
    <fullName>Matter_Notes_Long__c</fullName>
    <label>Matter Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>