force-app/main/default/objects/Lead/fields/Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://bakerlawgroup.lightning.force.com/lightning/r/Lead/&quot; + Id +&quot;/view&quot;, Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>