force-app/main/default/objects/Lead/fields/Names_of_Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Additional_Contacts__c</fullName>
    <label>Names of Additional Contacts</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>