force-app/main/default/objects/Lead/fields/Nature_of_Matter__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Matter__c</fullName>
    <label>Nature of Matter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement (Employee, Business)</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Cease and Desist</fullName>
            </value>
            <value>
                <fullName>Child Custody</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Conservatorship</fullName>
            </value>
            <value>
                <fullName>Construction Defect</fullName>
            </value>
            <value>
                <fullName>Contested</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Deed</fullName>
            </value>
            <value>
                <fullName>Demand Letter</fullName>
            </value>
            <value>
                <fullName>Deposit / Rent</fullName>
            </value>
            <value>
                <fullName>DHS</fullName>
            </value>
            <value>
                <fullName>Discrimination</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Drug Related</fullName>
            </value>
            <value>
                <fullName>DUI</fullName>
            </value>
            <value>
                <fullName>Easement</fullName>
            </value>
            <value>
                <fullName>Economic Crime (fraud, money laundering, etc)</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Eviction</fullName>
            </value>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Habitability</fullName>
            </value>
            <value>
                <fullName>Handbook</fullName>
            </value>
            <value>
                <fullName>Homicide</fullName>
            </value>
            <value>
                <fullName>Hostile Work Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>