force-app/main/default/objects/Lead/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Paid Consult (provide date and time under scope of work)</fullName>
            </value>
            <value>
                <fullName>Send a Fee Agreement</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>