force-app/main/default/objects/Lead/fields/Next_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Next_Deadline__c</fullName>
    <label>Next Deadline</label>
    <type>Date</type>
</CustomField>