force-app/main/default/objects/Lead/fields/Other_Parties_Involved__c.field-meta.xml
<CustomField>
    <fullName>Other_Parties_Involved__c</fullName>
    <label>Other Parties Involved</label>
    <type>TextArea</type>
</CustomField>