force-app/main/default/objects/Lead/fields/Paralegal_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Paralegal_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paralegal Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>