force-app/main/default/objects/Lead/fields/Payment_Made2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Made2__c</fullName>
    <formula>IF(
  ISBLANK(Date_First_Payment__c), 
  &quot;No&quot;,
  &quot;Yes&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Made</label>
    <type>Text</type>
</CustomField>