force-app/main/default/objects/Lead/fields/PE_Deceased_Date_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>PE_Deceased_Date_Of_Death__c</fullName>
    <label>Deceased Date of Death</label>
    <type>Date</type>
</CustomField>