force-app/main/default/objects/Lead/fields/PE_Deceased_Location_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>PE_Deceased_Location_Of_Death__c</fullName>
    <label>Deceased Location of Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>