force-app/main/default/objects/Lead/fields/PE_Deceased_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>PE_Deceased_Marital_Status__c</fullName>
    <label>Deceased Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married – traditional ceremony</fullName>
            </value>
            <value>
                <fullName>Married – certificate or common law</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>