force-app/main/default/objects/Lead/fields/PE_Deceased_Name__c.field-meta.xml
<CustomField>
    <fullName>PE_Deceased_Name__c</fullName>
    <label>Name of Deceased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>