force-app/main/default/objects/Lead/fields/PE_Deceased_Own_Real_Estate_CO__c.field-meta.xml
<CustomField>
    <fullName>PE_Deceased_Own_Real_Estate_CO__c</fullName>
    <label>Deceased Own Real Estate in CO?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>