force-app/main/default/objects/Lead/fields/PE_Deceased_Residence_Location__c.field-meta.xml
<CustomField>
    <fullName>PE_Deceased_Residence_Location__c</fullName>
    <label>Deceased Residence Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>