force-app/main/default/objects/Lead/fields/PE_Decedent_Asset_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>PE_Decedent_Asset_Other_Specify__c</fullName>
    <label>Decedent Asset Other (Specify)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>