force-app/main/default/objects/Lead/fields/PE_Decedent_Asset_Types__c.field-meta.xml
<CustomField>
    <fullName>PE_Decedent_Asset_Types__c</fullName>
    <label>Decedent Asset Types (Check all)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank accounts</fullName>
            </value>
            <value>
                <fullName>Cars/vehicles</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Stocks, bonds, annuities</fullName>
            </value>
            <value>
                <fullName>Trusts</fullName>
            </value>
            <value>
                <fullName>Other real estate inside of Colorado</fullName>
            </value>
            <value>
                <fullName>Other real estate outside of Colorado</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>