force-app/main/default/objects/Lead/fields/PE_Decedent_Parents_Living__c.field-meta.xml
<CustomField>
    <fullName>PE_Decedent_Parents_Living__c</fullName>
    <label>Decedent Parents Living?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>