force-app/main/default/objects/Lead/fields/PE_Estate_Value_Estimate__c.field-meta.xml
<CustomField>
    <fullName>PE_Estate_Value_Estimate__c</fullName>
    <label>Estate Value Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>