force-app/main/default/objects/Lead/fields/PE_Jurisdiction_In_Colorado__c.field-meta.xml
<CustomField>
    <fullName>PE_Jurisdiction_In_Colorado__c</fullName>
    <label>Jurisdiction in Colorado?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>