force-app/main/default/objects/Lead/fields/PE_Other_Unlisted_Assets__c.field-meta.xml
<CustomField>
    <fullName>PE_Other_Unlisted_Assets__c</fullName>
    <label>Other Unlisted Assets (Decedent)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>