force-app/main/default/objects/Lead/fields/PE_PC_Relationship_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>PE_PC_Relationship_Other_Specify__c</fullName>
    <label>PC Relationship Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>